update deps, cleanup renderer kernel, refactor/split up main ns